--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pump.fun",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "pump.fun api sdk",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "dev": "npx nodemon ./index.ts",
     "test": "npm run test"
   },
   "repository": {
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/bs58": "^4.0.4",
     "@types/node": "^20.14.2",
+    "nodemon": "^3.1.3",
     "typescript": "^5.4.5"
   }
 }
